# flag_football_ep

./: README.md  api_call.ipynb  api_fuzzing.ipynb  data_raw.csv  ep_model.ipynb  games_plays.csv  model_eval_situations.csv  pyproject.toml  team_roster.csv  team_roster_OLD.csv
Python/: fetch_sportappfi_api.py  helper_add_ep_wp.py  helper_add_hudl_mutations.py  helper_add_model_mutations.py
config/: config.py
insights/: df2.csv  explainable_ai_ep.ipynb  explainable_ai_wp.ipynb  insights.ipynb  model_eval_situations.csv  model_eval_situations_simple.csv  model_eval_situations_ydstogosimple.csv  model_eval_situations_ydstogosimple2.csv
models/: ep_model.ipynb  ep_model.pkl  ep_model_simple.pkl  wp_model.ipynb  wp_model.pkl  wp_model_simple.pkl
src/flag_football_ep/: __init__.py
