[project]
name = "flag-football-ep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "polars>=1.5.0",
    "numpy>=2.1.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "scikit-learn>=1.5.1",
    "hyperopt>=0.2.7",
    "xgboost>=2.1.1",
    "setuptools>=73.0.1",
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
